...
    <string name="reminder_notification_title">Do not interrupt my sleep!!!</string>
    <string name="reminder_notification_body">Go back to your task in</string>
    <string name="reminder_notification_finish">Awww! Time\'s up!</string>
    <string name="title_timer">Sleep Timer</string>
    <string name="zero_time_timer">00</string>
    <string name="hour_hint_timer">Hour</string>
    <string name="start_button_timer">START</string>
    <string name="pause_button_timer">PAUSE</string>
    <string name="resume_button_timer">RESUME</string>
    <string name="cancel_button_timer">CANCEL</string>
    <string name="title_cancel_timer">Go away!</string>
    <string name="message_cancel_timer">Do you really want to interrupt my sleep?</string>
    <string name="yes_btn">YES</string>
    <string name="no_btn">NO</string>
    <string name="title_pause_timer">Pausing</string>
    <string name="message_pause_timer">You can only stay on this page without interrupting my sleep!</string>
    <string name="ok_btn">Got it!</string>
    <string name="title_finish_timer">Hey master, I had a great sleep!</string>
    <string name="message_finish_timer">Focus task completed</string>
    <string name="dismiss_btn">Dismiss</string>
    <string name="title_interrupt_timer">You interrupted my sleep!</string>
    <string name="message_interrupt_timer">Focus task failed</string>
    <string name="title_adopt_name">Anonymous cat!</string>
...
